# wsl-ssh-agent

./: .gitignore  .golangci.yml  CMakeLists.txt  README.md  Taskfile.yaml  build-release.sh  go.mod  go.sum  gui.go
.github/workflows/: release.yml
citrus/: clipboard.go  iprange.go  params.go  server.go  uri.go
cmake/: FindGo.cmake  agent.rc.in  agent.xml.in  githash.sh  pre-commit  pre-push  scoophash.sh  sign.sh  version.go.in  win32.toolchain  win64.toolchain  wsl-ssh-agent.json.in
cmd/agent/: main.go
docs/: wsl-ssh-agent-relay
release/: CMakeCache.txt  Makefile  changelog.txt  cmake_install.cmake  install_manifest.txt
scripts/bash/: checkall.sh  vercmp.sh
scripts/git/: pre-commit  pre-push
static/: doc.go  files.go
systray/: README.md  systray.go  systray_windows.go
tools/: tools.go
util/: files.go  keys.go  log.go  mbox.go  names.go  setenv.go  winver.go
